--- a/server/build.gradle
+++ b/server/build.gradle
@@ -33,9 +33,14 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	compile("org.springframework.boot:spring-boot-devtools")
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
 task wrapper(type: Wrapper) {
 	gradleVersion = '2.9'
+}
+
+bootRun {
+	addResources = true
 }
