--- a/server/build.gradle
+++ b/server/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
+classes.dependsOn gulp_build
+gulp_build.dependsOn npm_install
+
 task wrapper(type: Wrapper) {
 	gradleVersion = '2.9'
 }
