--- a/app.json
+++ b/app.json
@@ -3,9 +3,15 @@
   "scripts": {
   },
   "env": {
-    "BUILDPACK_URL": "https://github.com/marcoVermeulen/heroku-buildpack-gradlew.git",
-    "JAVA_OPTS": "-Xmx384m -Xss512k -XX:+UseCompressedOops",
-    "PORT": "5000"
+    "BUILDPACK_URL": {
+      "required": true
+    },
+    "JAVA_OPTS": {
+      "required": true
+    },
+    "PORT": {
+      "required": true
+    }
   },
   "addons": [
 
