deployhook env file

--- a/app.json
+++ b/app.json
@@ -11,6 +11,9 @@
     },
     "PORT": {
       "required": true
+    },
+    "DEPLOYHOOKS_HTTP_URL": {
+      "required": true
     }
   },
   "addons": [
